--- a/food_app/base_pages/templates/base_html_page.html
+++ b/food_app/base_pages/templates/base_html_page.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css\bootstrap.min.css' %}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href='https://fonts.googleapis.com/css?family=Rancho:300,400,700' rel='stylesheet' type='text/css'>
       <script type="text/javascript" src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
   </head>
   <body>
@@ -58,7 +59,9 @@
     <!-- buttons -->
     <div class="container my-auto btns">
       <br>
-      <h1 align="center" id="choose">Time to Munch!!</h1>
+      <h1 align="center" id="choose" style="font-size: 3rem; font-family: 'Rancho', Segoe UI, Tahoma, Geneva, Verdana, sans-serif">
+        Time to Munch!!
+      </h1>
       <hr class="bg-dark">
       <div class="row">
         <div class="col-8 mx-auto">
