--- a/food_app/base_pages/templates/MyOrders.html
+++ b/food_app/base_pages/templates/MyOrders.html
@@ -34,16 +34,19 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="fb-homepage.html">
-                  <i class="fa fa-home"></i> Home<span class="sr-only">(current)</span>
+                    <i class="align-middle" data-feather="home"></i> Home<span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Dashboard </a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">Profile</a>
-                <a class="dropdown-item" href="#">My Orders</a>
+                <a class="dropdown-item active" href="#">My Orders</a>
                 <a class="dropdown-item" href="#">Passbook</a>
               </div>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="#"><i class="align-middle" data-feather="log-out"></i> Logout  </a>
             </li>
           </ul>
         
@@ -61,7 +64,7 @@
         <div class="page">
             <p>
                 <div class="dropdown">                
-                    <button  onclick="toggleBtnSort()" class="btn btn-sort" id="btn-sort">Sort
+                    <button  onclick="toggleBtnSort()" class="btn btn-sort" id="btn-sort ">Sort
                         <i class="align-middle" data-feather="chevron-down"></i>
                     </button>               
                     <div id="myDropdownBtn" class="dropdown-content">               
@@ -88,7 +91,7 @@
                         <td class="organisationnumber">140406</td>
                         <td class="organisationname">14/5/18 3:55PM</td>
                         <td class="organisationname">Burger</td>
-                        <td class="actions"> <a href="?" class="remove-item" title="Remove">Cancel</a></td>
+                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
                         <td class="organisationname">Georgia</td>
                         <td class="organisationname">Confirmed</td>
                         <td class="organisationname">15 mins</td>
@@ -97,7 +100,7 @@
                         <td class="organisationnumber">140412</td>
                         <td class="organisationname">17/5/18 9:34PM</td>
                         <td class="organisationname">Paneer Roll/2</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove">Cancel</a></td>
+                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
                         <td class="organisationname">Rollwala</td>
                         <td class="organisationname">Pending</td>
                         <td class="organisationname">-</td>
@@ -106,7 +109,7 @@
                         <td class="organisationnumber">140404</td>
                         <td class="organisationname">20/5/18 11:02AM</td>
                         <td class="organisationname">Coleselow Sandwich</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove">Cancel</a></td>
+                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
                         <td class="organisationname">Rama Enterprise</td>
                         <td class="organisationname">Delivered</td>
                         <td class="organisationname">-</td>
@@ -115,7 +118,7 @@
                         <td class="organisationnumber">140408</td>
                         <td class="organisationname">23/5/18 6:23PM</td>
                         <td class="organisationname">Baked Nachos</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove">Cancel</a></td>
+                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
                         <td class="organisationname">Georgia</td>
                         <td class="organisationname">Confirmed</td>
                         <td class="organisationname">20 mins</td>
@@ -124,9 +127,15 @@
             </table>
         </div>
 
-        <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
-        </footer>
+    <!-- FOOTER -->
+    <footer class="container">
+        <p class="float-right">
+            <a style="color: black" href="#">
+                <i class="align-middle" data-feather="chevrons-up">
+                </i> Back to top
+            </a>
+        </p>
+    </footer>
     </main>
 
 <!-- Bootstrap core JavaScript
