--- a/food_app/base_pages/templates/MyOrders.html
+++ b/food_app/base_pages/templates/MyOrders.html
@@ -60,97 +60,95 @@
       <!-- end navbar -->
       </header>
 
-    <main role="main">
-        <div class="page">
-            <p>
-                <div class="dropdown">                
-                    <button  onclick="toggleBtnSort()" class="btn btn-sort" id="btn-sort ">Sort
-                        <i class="align-middle" data-feather="chevron-down"></i>
-                    </button>               
-                    <div id="myDropdownBtn" class="dropdown-content">               
-                        <a href="#about">All</a>
-                        <a href="#base">Confirmed</a>
-                        <a href="#about">Delivered</a>
-                        <a href="#base">Pending</a>
-                    </div>
-              </div>
-            </p>
-            <table class="layout display responsive-table">
-                <thead>
-                    <tr>
-                        <th>Order ID</th>
-                        <th>Date/Time</th>
-                        <th colspan="2">Name/Quantity</th>
-                        <th>Vendor</th>
-                        <th>Status</th>
-                        <th>Time Remaining</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="organisationnumber">140406</td>
-                        <td class="organisationname">14/5/18 3:55PM</td>
-                        <td class="organisationname">Burger</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
-                        <td class="organisationname">Georgia</td>
-                        <td class="organisationname">Confirmed</td>
-                        <td class="organisationname">15 mins</td>
-                    </tr>       
-                    <tr>
-                        <td class="organisationnumber">140412</td>
-                        <td class="organisationname">17/5/18 9:34PM</td>
-                        <td class="organisationname">Paneer Roll/2</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
-                        <td class="organisationname">Rollwala</td>
-                        <td class="organisationname">Pending</td>
-                        <td class="organisationname">-</td>
-                    </tr>
-                    <tr>
-                        <td class="organisationnumber">140404</td>
-                        <td class="organisationname">20/5/18 11:02AM</td>
-                        <td class="organisationname">Coleselow Sandwich</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
-                        <td class="organisationname">Rama Enterprise</td>
-                        <td class="organisationname">Delivered</td>
-                        <td class="organisationname">-</td>
-                    </tr>
-                    <tr>
-                        <td class="organisationnumber">140408</td>
-                        <td class="organisationname">23/5/18 6:23PM</td>
-                        <td class="organisationname">Baked Nachos</td>
-                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
-                        <td class="organisationname">Georgia</td>
-                        <td class="organisationname">Confirmed</td>
-                        <td class="organisationname">20 mins</td>
-                    </tr>     
-                </tbody>
-            </table>
-        </div>
+	    <main role="main">
+	        <div class="page">
+	            <p>
+	                <div class="dropdown">                
+	                    <button  onclick="toggleBtnSort()" class="btn btn-sort" id="btn-sort ">Sort
+	                        <i class="align-middle" data-feather="chevron-down"></i>
+	                    </button>               
+	                    <div id="myDropdownBtn" class="dropdown-content">               
+	                        <a href="#about">All</a>
+	                        <a href="#base">Confirmed</a>
+	                        <a href="#about">Delivered</a>
+	                        <a href="#base">Pending</a>
+	                    </div>
+	              </div>
+	            </p>
+	            <table class="layout display responsive-table">
+	                <thead>
+	                    <tr>
+	                        <th>Order ID</th>
+	                        <th>Date/Time</th>
+	                        <th colspan="2">Name/Quantity</th>
+	                        <th>Vendor</th>
+	                        <th>Status</th>
+	                        <th>Time Remaining</th>
+	                    </tr>
+	                </thead>
+	                <tbody>
+	                    <tr>
+	                        <td class="organisationnumber">140406</td>
+	                        <td class="organisationname">14/5/18 3:55PM</td>
+	                        <td class="organisationname">Burger</td>
+	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <td class="organisationname">Georgia</td>
+	                        <td class="organisationname">Confirmed</td>
+	                        <td class="organisationname">15 mins</td>
+	                    </tr>       
+	                    <tr>
+	                        <td class="organisationnumber">140412</td>
+	                        <td class="organisationname">17/5/18 9:34PM</td>
+	                        <td class="organisationname">Paneer Roll/2</td>
+	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <td class="organisationname">Rollwala</td>
+	                        <td class="organisationname">Pending</td>
+	                        <td class="organisationname">-</td>
+	                    </tr>
+	                    <tr>
+	                        <td class="organisationnumber">140404</td>
+	                        <td class="organisationname">20/5/18 11:02AM</td>
+	                        <td class="organisationname">Coleselow Sandwich</td>
+	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <td class="organisationname">Rama Enterprise</td>
+	                        <td class="organisationname">Delivered</td>
+	                        <td class="organisationname">-</td>
+	                    </tr>
+	                    <tr>
+	                        <td class="organisationnumber">140408</td>
+	                        <td class="organisationname">23/5/18 6:23PM</td>
+	                        <td class="organisationname">Baked Nachos</td>
+	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <td class="organisationname">Georgia</td>
+	                        <td class="organisationname">Confirmed</td>
+	                        <td class="organisationname">20 mins</td>
+	                    </tr>     
+	                </tbody>
+	            </table>
+	        </div>
 
-    <!-- FOOTER -->
-    <footer class="container">
-        <p class="float-right">
-            <a style="color: black" href="#">
-                <i class="align-middle" data-feather="chevrons-up">
-                </i> Back to top
-            </a>
-        </p>
-    </footer>
-    </main>
+		    <!-- FOOTER -->
+		    <footer class="container">
+		        <p class="float-right">
+		            <a style="color: black" href="#">
+		                <i class="align-middle" data-feather="chevrons-up">
+		                </i> Back to top
+		            </a>
+		        </p>
+		    </footer>
+	    </main>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-<script src="../js/vendor/popper.min.js"></script>
-<script src="../js/dropdownbtn.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-<script src="../js/vendor/holder.min.js"></script>
-<script>
-    feather.replace()
-</script>
+	<script src="{% static 'js/vendor/jquery-slim.min.js' %}"></script>
+	<script src="../js/vendor/popper.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+	<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+	<script src="../js/vendor/holder.min.js"></script>
+	<script>
+	    feather.replace()
+	</script>
 
   </body>
 </html>
