Added User-Profile.html and its coresponding css and js

--- a/static/static/css/bootstrap.css
+++ b/static/static/css/bootstrap.css
@@ -2507,7 +2507,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
+  color: #007bff;
   background-color: #007bff;
   border-color: #007bff;
 }
