Updated the layouts of list-item.html and dynamic_vendor.html

--- a/food_app/base_pages/templates/dynamic_vendor.html
+++ b/food_app/base_pages/templates/dynamic_vendor.html
@@ -43,7 +43,7 @@
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">Profile</a>
                 <a class="dropdown-item" href="#">My Orders</a>
-                <a class="dropdown-item" href="#">Passbook</a>
+                <!-- <a class="dropdown-item" href="#">Passbook</a> -->
               </div>
             </li>
             <li class="nav-item ">
@@ -63,15 +63,21 @@
     <main role="main">
         <h3 class="text-center my-3"><i>&lt;Vendor Name&gt;</i></h3>
 
-      <!-- FOOTER -->
-      <footer class="container">
-            <p class="float-right">
-                <a style="color: black" href="#">
-                    <i class="align-middle" data-feather="chevrons-up">
-                    </i> Back to top
-                </a>
-            </p>
-          </footer>
+      <div class="row px-auto">
+        <div class="col-10 mx-auto">
+          <a href="#" class="btn btn-lg btn-5">Proceed to Checkout</a>
+        </div>
+      </div>
+
+    <!-- FOOTER -->
+    <footer class="container">
+        <p class="float-right">
+            <a style="color: black" href="#">
+                <i class="align-middle" data-feather="chevrons-up">
+                </i> Back to top
+            </a>
+        </p>
+    </footer>
     </main>
 
 <!-- Bootstrap core JavaScript
