--- a/food_app/base_pages/templates/list-item.html
+++ b/food_app/base_pages/templates/list-item.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <div id="item-card" class="card m-2 bg-light">
-        <div id="item-row" class="d-table-row p-2">
-            <div id="item-name" class="d-table-cell col-5"><h4>Food Item</h4></div>
-            <div id="item-price" class="d-table-cell col-3"><h5>Price</h5></div>
-            <div class="btn btn-success d-table-cell col-3 ml-2">
-                <i class="align-middle" data-feather="shopping-cart"></i>
+        <div id="item-row" class="d-table-row p-1">
+            <div id="item-name" class="d-table-cell col-5 align-middle"><h4>Food Item</h4></div>
+            <div id="item-price" class="d-table-cell col-3 align-middle"><h5>Price</h5></div>
+            <div class="d-table-cell col-3 ml-2 align-middle">
+                <input type="number" name="quantity" min="0" max="5">
+            </div>
+            <div class="d-table-cell col-3 ml-2 align-middle">
+                <input type="checkbox" class="">
             </div>
         </div>
     </div>
