--- a/food_app/base_pages/templates/MyOrders.html
+++ b/food_app/base_pages/templates/MyOrders.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,16 +8,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href = "../css/dropdownbtn.css" rel = "stylesheet">
+    <link href = "{% static 'css/dropdownbtn.css' %}" rel = "stylesheet">
     <title>My Orders</title>
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/MyOrders.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/sldng-dgnl.css">
+    <link rel="stylesheet" href="{% static 'css/MyOrders.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
   </head>
   <body class="py-5">
     <!-- Animated Background -->           
@@ -44,6 +46,9 @@
                 <a class="dropdown-item active" href="#">My Orders</a>
                 <a class="dropdown-item" href="#">Passbook</a>
               </div>
+            </li>
+             <li class="nav-item ">
+                <a href="">{{ username }}</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="#"><i class="align-middle" data-feather="log-out"></i> Logout  </a>
@@ -80,7 +85,7 @@
 	                    <tr>
 	                        <th>Order ID</th>
 	                        <th>Date/Time</th>
-	                        <th colspan="2">Name/Quantity</th>
+	                        <th>Name/Quantity</th>
 	                        <th>Vendor</th>
 	                        <th>Status</th>
 	                        <th>Time Remaining</th>
@@ -91,7 +96,7 @@
 	                        <td class="organisationnumber">140406</td>
 	                        <td class="organisationname">14/5/18 3:55PM</td>
 	                        <td class="organisationname">Burger</td>
-	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <!-- <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td> -->
 	                        <td class="organisationname">Georgia</td>
 	                        <td class="organisationname">Confirmed</td>
 	                        <td class="organisationname">15 mins</td>
@@ -100,7 +105,7 @@
 	                        <td class="organisationnumber">140412</td>
 	                        <td class="organisationname">17/5/18 9:34PM</td>
 	                        <td class="organisationname">Paneer Roll/2</td>
-	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <!-- <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td> -->
 	                        <td class="organisationname">Rollwala</td>
 	                        <td class="organisationname">Pending</td>
 	                        <td class="organisationname">-</td>
@@ -109,7 +114,7 @@
 	                        <td class="organisationnumber">140404</td>
 	                        <td class="organisationname">20/5/18 11:02AM</td>
 	                        <td class="organisationname">Coleselow Sandwich</td>
-	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <!-- <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td> -->
 	                        <td class="organisationname">Rama Enterprise</td>
 	                        <td class="organisationname">Delivered</td>
 	                        <td class="organisationname">-</td>
@@ -118,7 +123,7 @@
 	                        <td class="organisationnumber">140408</td>
 	                        <td class="organisationname">23/5/18 6:23PM</td>
 	                        <td class="organisationname">Baked Nachos</td>
-	                        <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td>
+	                        <!-- <td class="actions"><a href="?" class="remove-item" title="Remove"></a></td> -->
 	                        <td class="organisationname">Georgia</td>
 	                        <td class="organisationname">Confirmed</td>
 	                        <td class="organisationname">20 mins</td>
@@ -142,10 +147,10 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 	<script src="{% static 'js/vendor/jquery-slim.min.js' %}"></script>
-	<script src="../js/vendor/popper.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
+	<script src="{% static '.js/vendor/popper.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-	<script src="../js/vendor/holder.min.js"></script>
+	<script src="{% static 'js/vendor/holder.min.js' %}"></script>
 	<script>
 	    feather.replace()
 	</script>
