--- a/food_app/base_pages/templates/dynamic_vendor.html
+++ b/food_app/base_pages/templates/dynamic_vendor.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,17 +8,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href = "../css/dropdownbtn.css" rel = "stylesheet">
-    <link href = "../css/dynamic-vendor.css" rel = "stylesheet">
-    <title>Vendor xyz</title>
+    <link href = "{% static 'css/dropdownbtn.css' %}" rel = "stylesheet">
+    <link href = "{% static 'css/dynamic-vendor.css' %}" rel = "stylesheet">
+    <title>{{ vendor_name }}</title>
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/MyOrders.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/sldng-dgnl.css">
+    <link href="{% static 'css/MyOrders.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
   </head>
   <body class="py-5">
     <!-- Animated Background -->           
@@ -46,6 +48,9 @@
                 <!-- <a class="dropdown-item" href="#">Passbook</a> -->
               </div>
             </li>
+             <li class="nav-item ">
+                <a href="">{{ username }}</a>
+            </li>
             <li class="nav-item ">
                 <a class="nav-link" href="#"><i class="align-middle" data-feather="log-out"></i> Logout  </a>
             </li>
@@ -61,13 +66,32 @@
       </header>
 
     <main role="main">
-        <h3 class="text-center my-3"><i>&lt;Vendor Name&gt;</i></h3>
+        <h3 class="text-center my-3"><i>{{ vendor_name }}</i></h3>
+
+
+    <form method = 'POST'> {% csrf_token %}
+
+      {% for item, price in food_det %}
+        <div id="item-card" class="card m-2 bg-light">
+          <div id="item-row" class="d-table-row p-1">
+            <div id="item-name" class="d-table-cell col-5 align-middle"><h4>{{ item }}</h4></div>
+            <div id="item-price" class="d-table-cell col-3 align-middle"><h5>{{ price }}</h5></div>
+            <div class="d-table-cell col-3 ml-2 align-middle">
+                <input type="number" name = "{{ item }}" min="0" max="5">
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+
 
       <div class="row px-auto">
         <div class="col-10 mx-auto">
-          <a href="#" class="btn btn-lg btn-5">Proceed to Checkout</a>
+          <button type = 'submit' class="btn btn-lg btn-5">Proceed to Checkout</button>
         </div>
       </div>
+
+    </form>
+
 
     <!-- FOOTER -->
     <footer class="container">
@@ -83,12 +107,14 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../js/vendor/jquery-slim.min.js"></script>
-<script src="../js/vendor/popper.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/dynamic-vendor.js"></script>
+    <script src="{% static 'js/vendor/jquery-slim.min.js' %}"></script>
+<script src="{% static 'js/vendor/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/dynamic-vendor.js' %}"></script>
+<script src="{% static 'js/repeat-item.min.js' %}"></script>
+<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-<script src="../js/vendor/holder.min.js"></script>
+<script src="{% static 'js/vendor/holder.min.js' %}"></script>
 <script>
     feather.replace()
 </script>
