--- a/food_app/base_pages/templates/home.html
+++ b/food_app/base_pages/templates/home.html
@@ -1,7 +1,45 @@
 {% extends 'base_html_page.html' %}
 
-{% block login_user %}
-<a class="nav-link" href="/login"><i class="fas fa-smile"></i> Login</a>
+{% block nav %}
+
+<!-- Responsive Navbar -->
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Food-Bear</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarsExample01">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">
+                <i class="fa fa-home"></i> Home<span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            
+            <a class="nav-link" href="/login"><i class="fas fa-smile"></i> Login</a>
+
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown 
+              <i class="align-middle" data-feather="chevron-down"></i>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      <!-- 
+        <form class="form-inline my-2 my-md-0">
+          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        </form> 
+      -->
+      </div>
+    </nav> 
+    <!-- end navbar -->
+
 {% endblock %}        
 
 {% block button2 %}
