--- a/food_app/base_pages/templates/sort-by-vendor.html
+++ b/food_app/base_pages/templates/sort-by-vendor.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href = "../css/dropdownbtn.css" rel = "stylesheet">
+    <link href = "{% static 'css/dropdownbtn.css' %}" rel = "stylesheet">
     <title>Sort By Vendor</title>
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js">
     </script>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" href="../css/carousel.css">
-    <link rel="stylesheet" type="text/css" href="../css/sldng-dgnl.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/carousel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
   </head>
   <body>
       
@@ -46,6 +48,9 @@
               <a class="dropdown-item" href="#">Passbook</a>
             </div>
           </li>
+           <!-- <li class="nav-item ">
+                <a href="">{{ username }}</a>
+            </li> -->
           <li class="nav-item ">
               <a class="nav-link" href="#"><i class="align-middle" data-feather="log-out"></i> Logout  </a>
             </li>
@@ -251,13 +256,13 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     
-    <script src="../js/vendor/jquery-slim.min.js"></script>
+    <script src="{% static 'js/vendor/jquery-slim.min.js' %}"></script>
     <script type="text/javascript">feather.replace()</script>
-    <script src="../js/vendor/popper.min.js"></script>
-    <script src="../js/dropdownbtn.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="{% static 'js/vendor/popper.min.js' %}"></script>
+    <script src="{% static 'js/dropdownbtn.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../js/vendor/holder.min.js"></script>
+    <script src="{% static 'js/vendor/holder.min.js' %}"></script>
     <script>
         feather.replace()
     </script>
