Revert "Some modificatin to the checkout page"
This reverts commit 80be5361868a3ad6186b858216d1ff818fb6ef4a.

--- a/food_app/base_pages/templates/Checkout_Page.html
+++ b/food_app/base_pages/templates/Checkout_Page.html
@@ -72,14 +72,10 @@
                       <button type = 'submit' class="btn delete btn-primary btn-lg btn-5">Proceed to Payment</button>
                     </div>
                   </div>
-                  <footer class="container">
-                      <p class="float-right">
-                          <a style="color: black" href="#">
-                              <i class="align-middle" data-feather="chevrons-up">
-                              </i> Back to top
-                          </a>
-                      </p>
-                  </footer>
+
+        <footer class="container">
+                <p class="float-right"><a href="#">Back to top</a></p>
+            </footer>
         </main>
         
     <!-- Bootstrap core JavaScript
