--- a/food_app/base_pages/templates/Checkout_Page.html
+++ b/food_app/base_pages/templates/Checkout_Page.html
@@ -66,9 +66,9 @@
 
         
 
-        <h2>Shopping Cart</h2>
+        <h2 class = " my-4">Shopping Cart</h2>
 
-        <div class="shopping-cart">
+        <div class="shopping-cart ">
         
          
           <div class="totals">
