--- a/food_app/base_pages/templates/home.html
+++ b/food_app/base_pages/templates/home.html
@@ -5,16 +5,16 @@
   <head>
       <title>Welcome to Food Bear</title>
       <link rel="stylesheet" href="{% static 'css\navig.css' %}">
-      <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
+      <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}"> -->
       <link rel="stylesheet" type="text/css" href="{% static 'css\bootstrap.min.css' %}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script type="text/javascript" src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
   </head>
   <body>
     <!-- Animated Background -->           
-    <div class="bg"></div>
+    <!-- <div class="bg"></div>
     <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
+    <div class="bg bg3"></div> -->
     <!-- Animated Background Ends -->  
 
     {% block nav %}
