--- a/food_app/base_pages/templates/user_home.html
+++ b/food_app/base_pages/templates/user_home.html
@@ -31,10 +31,10 @@
             </li>
           </ul>
         
-          <form class="form-inline my-2 my-md-0">
+          <!-- <form class="form-inline my-2 my-md-0">
             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 align-right mx-auto" type="submit">Search</button>
-          </form> 
+          </form>  -->
        
         </div>
       </nav> 
