change-1 home.html the-final commit

--- a/food_app/base_pages/templates/u_home.html
+++ b/food_app/base_pages/templates/u_home.html
@@ -37,6 +37,6 @@
 {% block button2 %}
 <div class="col-8 mx-auto">
 <!-- <a href="/vendors/{{ username }}" class="btn btn-sm animated-button thar-one">Show all Vendors</a> -->
-  <a href="#" id="hmpg-btns" class="btn btn-lg red mx-auto">Show all Vendors</a>
+  <a href="/vendors/{{ username }}" id="hmpg-btns" class="btn btn-lg red mx-auto">Show all Vendors</a>
 </div>
 {% endblock %}
