--- a/food_app/base_pages/templates/list_of_vendors.html
+++ b/food_app/base_pages/templates/list_of_vendors.html
@@ -17,14 +17,14 @@
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/carousel.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/buttons.css' %}">
   </head>
   <body>
       
       <!-- Animated Background -->           
-      <div class="bg"></div>
+      <!-- <div class="bg"></div>
       <div class="bg bg2"></div>
-      <div class="bg bg3"></div>
+      <div class="bg bg3"></div> -->
       <!-- Animated Background Ends -->
     <header>
       <!-- Responsive Navbar -->
@@ -35,7 +35,7 @@
 
     <main role="main">
 
-        <div id="myCarousel" class="carousel slide my-2" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide my-1" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
               <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -47,18 +47,18 @@
                 <div class="container">
                   <div class="carousel-caption text-left">
                     <h3><strong>Today's Special Dish...</strong></h3>
-                    <p>Experiment with your tastes with today's special dish.</p>
+                    <p style="color: white;">Experiment with your tastes with today's special dish.</p>
                     <p><a class="btn btn-lg btn-info" href="#" role="button">Order Now</a></p>
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
                 <img id="blurimage"
-                class="second-slide" src="http://jenixe.com/wp-content/uploads/2015/10/536813_chocolate_cake-1024x640.jpg">
+                class="second-slide" src="https://timeincsecure-a.akamaihd.net/rtmp_uds/474428695/201711/3955/474428695_5661309737001_5661262459001-vs.jpg?pubId=474428695&videoId=5661262459001">
                 <div class="container">
                   <div class="carousel-caption">
                     <h3><strong>Don't forget to try!</strong></h3>
-                    <p>No more worrying to order cakes for your friend's birthday. </p>
+                    <p style="color: white;">No more worrying to order cakes for your friend's birthday. </p>
                     <p><a class="btn btn-lg btn-info" href="#" role="button">Order Now</a></p>
                   </div>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="container">
                   <div class="carousel-caption text-right">
                     <h3><strong>Enrich your taste buds with...</strong></h3>
-                    <p>Order, pay and grab your pizza in no time.</p>
+                    <p style="color: white;">Order, pay and grab your pizza in no time.</p>
                     <p><a class="btn btn-lg btn-info" href="#" role="button">Order Now</a></p>
                   </div>
                 </div>
