--- a/food_app/base_pages/templates/u_User-Profile.html
+++ b/food_app/base_pages/templates/u_User-Profile.html
@@ -22,13 +22,13 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/MyOrders.css' %}" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/sldng-dgnl.css' %}">
+   
   </head>
   <body class="py-5">
     <!-- Animated Background -->           
-    <div class="bg"></div>
+   <!--  <div class="bg"></div>
     <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
+    <div class="bg bg3"></div> -->
     <!-- Animated Background Ends -->
     <header>
         <!-- Responsive Navbar -->
@@ -45,11 +45,11 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Dashboard </a>
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="align-middle" data-feather="user"></i> {{ username }}'s Dashboard </a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">Profile</a>
                 <a class="dropdown-item" href="#">My Orders</a>
-                <a class="dropdown-item" href="#">Passbook</a>
+               <!--  <a class="dropdown-item" href="#">Passbook</a> -->
               </div>
             </li>
 
@@ -58,10 +58,10 @@
                   </li>
           </ul>
         
-          <form class="form-inline my-2 my-md-0">
+         <!--  <form class="form-inline my-2 my-md-0">
             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 align-right mx-auto" type="submit">Search</button>
-          </form> 
+          </form>  -->
          
         </div>
       </nav> 
@@ -72,11 +72,11 @@
             <div class="form">
                     <h3>Your Profile</h3>
 
-                    <div class="">
+                   <!--  <div class="">
                         <img class="rounded-circle" src="
                         http://www.lgcare.com/upload/brand/attach_file2_20140429105543603.jpg" 
                         alt="Generic placeholder image" width="140" height="140">
-                    </div>
+                    </div> -->
 
                     <div class="form-group">
                       <input type="text" class="form-control" value="" placeholder="Name" id="contact-name" />
