--- a/food_app/base_pages/templates/u_MyOrders.html
+++ b/food_app/base_pages/templates/u_MyOrders.html
@@ -21,9 +21,9 @@
   </head>
   <body class="py-5">
     <!-- Animated Background -->           
-    <div class="bg"></div>
+  <!--   <div class="bg"></div>
     <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
+    <div class="bg bg3"></div> -->
     <!-- Animated Background Ends -->
     <header>
         <!-- Responsive Navbar -->
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Dashboard </a>
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="align-middle" data-feather="user"></i> {{ username }}'s Dashboard </a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">Profile</a>
                 <a class="dropdown-item active" href="#">My Orders</a>
@@ -55,10 +55,10 @@
             </li>
           </ul>
         
-          <form class="form-inline my-2 my-md-0">
+         <!--  <form class="form-inline my-2 my-md-0">
             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 align-right mx-auto" type="submit">Search</button>
-          </form> 
+          </form>  -->
        
         </div>
       </nav> 
